--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: ;
 }
 
 body {
@@ -27,8 +27,8 @@ main {
 .animal-buttons {
   display: flex; 
   justify-content: flex-start;
-  margin-top: 20px;
-  padding: 0 15px;
+  margin-top: 30px;
+  padding: 0 20px;
   gap: 15px;
   width: 100%;
   
@@ -75,8 +75,6 @@ main {
   color: blue;              
   border-color: blue;       
 }
-
-
 
 
 .head {
@@ -155,6 +153,11 @@ footer {
   padding: 0 10px;
   transform: translateY(30px);
   cursor: pointer;
+}
+
+#arrow-link {
+  text-decoration: none;
+  color: inherit;
 }
 
 #arrow-symbol {
